...
                fontSize: 16.sp,
                color: AppColors.grey
              )
            ),
            SizedBox(height: 20.h),
            AppTextField(
              key: const Key('reset_password_email_textfield'),
              keyboardType: TextInputType.emailAddress,
              hintText: 'Email',
              controller: resetPasswordController.emailController,
              onChanged: resetPasswordController.validate
            ),
            SizedBox(height: 20.h),
            Obx(() =>
              AppButton(
                key: const Key('reset_password_button'),
                height: 44.h,
                backgroundColor: AppColors.blue,
                borderRadius: BorderRadius.circular(6.r),
                onPressed: resetPasswordController.isValid.value ?
                  () async {
                    await authController.resetPassword(resetPasswordController.emailController.text);
...
